<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.login.LoginActivity">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="52dp"
            android:paddingEnd="0dp"
            android:text="@string/registro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/img_ayuda"
            android:src="@drawable/property_1_inactive" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvCompletaLosDatosDeRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:lineSpacingExtra="-3sp"
        android:text="@string/completa_los_datos_de_registro"
        android:textSize="20sp"
        android:letterSpacing="0"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nombre"
        app:hintAnimationEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompletaLosDatosDeRegistro"
        android:lineSpacingExtra="2sp"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreoElectronico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/correo_electronico"
        app:hintAnimationEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/contrasena"
        app:hintAnimationEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreoElectronico"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/confirmar_contrasena"
        app:hintAnimationEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilContrasena"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/recordarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewOlvideMiContrasena"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarContrasena"
        android:textSize="14sp"
        android:letterSpacing="0.01"
        android:textColor="@color/textColor"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textViewOlvideMiContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/olvide_mi_contrasena"
        android:textSize="14sp"
        android:letterSpacing="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarContrasena"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnRegistrarme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_iniciarSesion"
        android:text="@string/btn_registrarme"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvIngresaCon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/o_ingresa_con"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp"
        android:letterSpacing="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarme"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/ivFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook_logo_2019_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivGoogle"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresaCon"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/google"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/ivFb"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresaCon"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tvNoTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aun_no_tienes_una_cuenta"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp"
        android:letterSpacing="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvIniciarSesion"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:lineSpacingExtra="4sp"
        android:letterSpacing="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tvNoTienesCuenta"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
        app:layout_constraintVertical_bias="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>